Alteração no sistema de login e registro; remoção da m3o e adição do firebase; alterações nas entidades exam, session e user; menores mudanças

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,7 +43,7 @@
 	},
 	"search": {
 		"searchExams": "",
-		"placeholder": "",
+		"placeholder": "Search:",
 		"result": "",
 		"searchNotFound": ""
 	},
